package(default_visibility = ["//:__subpackages__"])

licenses(["notice"])

cc_library(
    name = "aes_siv_key_manager",
    hdrs = ["aes_siv_key_manager.h"],
    include_prefix = "tink/daead",
    deps = [
        "//proto:aes_siv_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:core/key_type_manager",
        "//tink:core/template_util",
        "//tink:deterministic_aead",
        "//tink:input_stream",
        "//tink/subtle:aes_siv_boringssl",
        "//tink/subtle:random",
        "//tink/util:constants",
        "//tink/util:errors",
        "//tink/util:input_stream_util",
        "//tink/util:protobuf_helper",
        "//tink/util:secret_data",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:validation",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "deterministic_aead_wrapper",
    srcs = ["deterministic_aead_wrapper.cc"],
    hdrs = ["deterministic_aead_wrapper.h"],
    include_prefix = "tink/daead",
    deps = [
        "//proto:tink_cc_proto",
        "//tink:crypto_format",
        "//tink:deterministic_aead",
        "//tink:primitive_set",
        "//tink:primitive_wrapper",
        "//tink/internal:monitoring_util",
        "//tink/internal:registry_impl",
        "//tink/internal:util",
        "//tink/monitoring",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "deterministic_aead_config",
    srcs = ["deterministic_aead_config.cc"],
    hdrs = ["deterministic_aead_config.h"],
    include_prefix = "tink/daead",
    visibility = ["//visibility:public"],
    deps = [
        ":aes_siv_key_manager",
        ":aes_siv_proto_serialization",
        ":deterministic_aead_wrapper",
        "//proto:config_cc_proto",
        "//tink:registry",
        "//tink/config:tink_fips",
        "//tink/util:status",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/memory",
    ],
)

cc_library(
    name = "deterministic_aead_factory",
    srcs = ["deterministic_aead_factory.cc"],
    hdrs = ["deterministic_aead_factory.h"],
    include_prefix = "tink/daead",
    deps = [
        ":deterministic_aead_wrapper",
        "//tink:deterministic_aead",
        "//tink:key_manager",
        "//tink:keyset_handle",
        "//tink:registry",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/base:core_headers",
    ],
)

cc_library(
    name = "deterministic_aead_key_templates",
    srcs = ["deterministic_aead_key_templates.cc"],
    hdrs = ["deterministic_aead_key_templates.h"],
    include_prefix = "tink/daead",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:aes_siv_cc_proto",
        "//proto:common_cc_proto",
        "//proto:tink_cc_proto",
    ],
)

cc_library(
    name = "failing_daead",
    srcs = ["failing_daead.cc"],
    hdrs = ["failing_daead.h"],
    include_prefix = "tink/daead",
    deps = [
        "//tink:deterministic_aead",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "deterministic_aead_parameters",
    hdrs = ["deterministic_aead_parameters.h"],
    include_prefix = "tink/daead",
    deps = ["//tink:parameters"],
)

cc_library(
    name = "deterministic_aead_key",
    hdrs = ["deterministic_aead_key.h"],
    include_prefix = "tink/daead",
    deps = [
        ":deterministic_aead_parameters",
        "//tink:key",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "aes_siv_parameters",
    srcs = ["aes_siv_parameters.cc"],
    hdrs = ["aes_siv_parameters.h"],
    include_prefix = "tink/daead",
    deps = [
        ":deterministic_aead_parameters",
        "//tink:parameters",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "aes_siv_key",
    srcs = ["aes_siv_key.cc"],
    hdrs = ["aes_siv_key.h"],
    include_prefix = "tink/daead",
    deps = [
        ":aes_siv_parameters",
        ":deterministic_aead_key",
        "//tink:key",
        "//tink:partial_key_access_token",
        "//tink:restricted_data",
        "//tink/subtle:subtle_util",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "aes_siv_proto_serialization",
    srcs = ["aes_siv_proto_serialization.cc"],
    hdrs = ["aes_siv_proto_serialization.h"],
    include_prefix = "tink/daead",
    deps = [
        ":aes_siv_key",
        ":aes_siv_parameters",
        "//proto:aes_siv_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:partial_key_access",
        "//tink:restricted_data",
        "//tink:secret_key_access_token",
        "//tink/internal:key_parser",
        "//tink/internal:key_serializer",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:parameters_parser",
        "//tink/internal:parameters_serializer",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//tink/util:secret_proto",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "config_v0",
    srcs = ["config_v0.cc"],
    hdrs = ["config_v0.h"],
    include_prefix = "tink/daead",
    deps = [
        "//tink:configuration",
        "//tink/daead/internal:config_v0",
        "@com_google_absl//absl/log:check",
    ],
)

cc_library(
    name = "key_gen_config_v0",
    srcs = ["key_gen_config_v0.cc"],
    hdrs = ["key_gen_config_v0.h"],
    include_prefix = "tink/daead",
    deps = [
        "//tink:key_gen_configuration",
        "//tink/daead/internal:key_gen_config_v0",
        "@com_google_absl//absl/log:check",
    ],
)

# tests

cc_test(
    name = "aes_siv_key_manager_test",
    size = "small",
    srcs = ["aes_siv_key_manager_test.cc"],
    deps = [
        ":aes_siv_key_manager",
        "//proto:aes_siv_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:deterministic_aead",
        "//tink/subtle:aes_siv_boringssl",
        "//tink/util:istream_input_stream",
        "//tink/util:secret_data",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "deterministic_aead_wrapper_test",
    size = "small",
    srcs = ["deterministic_aead_wrapper_test.cc"],
    deps = [
        ":deterministic_aead_wrapper",
        ":failing_daead",
        "//proto:tink_cc_proto",
        "//tink:crypto_format",
        "//tink:deterministic_aead",
        "//tink:primitive_set",
        "//tink:registry",
        "//tink/internal:registry_impl",
        "//tink/monitoring",
        "//tink/monitoring:monitoring_client_mocks",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "deterministic_aead_config_test",
    size = "small",
    srcs = ["deterministic_aead_config_test.cc"],
    tags = ["fips"],
    deps = [
        ":aes_siv_key",
        ":aes_siv_key_manager",
        ":aes_siv_parameters",
        ":deterministic_aead_config",
        ":deterministic_aead_key_templates",
        "//proto:aes_siv_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:deterministic_aead",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:keyset_handle",
        "//tink:parameters",
        "//tink:partial_key_access",
        "//tink:primitive_set",
        "//tink:registry",
        "//tink:restricted_data",
        "//tink/config:global_registry",
        "//tink/config:tink_fips",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//tink/internal:serialization",
        "//tink/subtle:random",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "deterministic_aead_factory_test",
    size = "small",
    srcs = ["deterministic_aead_factory_test.cc"],
    deps = [
        ":aes_siv_key_manager",
        ":deterministic_aead_config",
        ":deterministic_aead_factory",
        "//proto:aes_siv_cc_proto",
        "//tink:core/key_manager_impl",
        "//tink:crypto_format",
        "//tink:deterministic_aead",
        "//tink:keyset_handle",
        "//tink/internal:key_info",
        "//tink/util:status",
        "//tink/util:test_keyset_handle",
        "//tink/util:test_util",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "deterministic_aead_key_templates_test",
    size = "small",
    srcs = ["deterministic_aead_key_templates_test.cc"],
    deps = [
        ":aes_siv_key_manager",
        ":deterministic_aead_key_templates",
        "//proto:aes_siv_cc_proto",
        "//proto:common_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:core/key_manager_impl",
        "//tink:deterministic_aead",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "failing_daead_test",
    srcs = ["failing_daead_test.cc"],
    deps = [
        ":failing_daead",
        "//tink:deterministic_aead",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "aes_siv_parameters_test",
    srcs = ["aes_siv_parameters_test.cc"],
    deps = [
        ":aes_siv_parameters",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "aes_siv_key_test",
    srcs = ["aes_siv_key_test.cc"],
    deps = [
        ":aes_siv_key",
        ":aes_siv_parameters",
        "//tink:partial_key_access",
        "//tink:restricted_data",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "aes_siv_proto_serialization_test",
    size = "small",
    srcs = ["aes_siv_proto_serialization_test.cc"],
    deps = [
        ":aes_siv_key",
        ":aes_siv_parameters",
        ":aes_siv_proto_serialization",
        "//proto:aes_siv_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:parameters",
        "//tink:partial_key_access",
        "//tink:restricted_data",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//tink/internal:serialization",
        "//tink/subtle:random",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "config_v0_test",
    srcs = ["config_v0_test.cc"],
    deps = [
        ":config_v0",
        ":deterministic_aead_key_templates",
        ":key_gen_config_v0",
        "//proto:tink_cc_proto",
        "//tink:deterministic_aead",
        "//tink:keyset_handle",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_googletest//:gtest_main",
    ],
)
